--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
-    "dev": "webpack-dev-server --inline --hot --open"
+    "dev": "webpack-dev-server --inline --hot --open",
+    "start": "node src/screens/score.js"
   },
   "keywords": [
     "game",
@@ -22,10 +23,15 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.3",
-    "jquery": "^3.3.1"
+    "express": "^4.16.4",
+    "expresss": "0.0.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.2",
+    "node-fetch": "^2.3.0"
   }
 }
