--- a/components/tasks/capitals/capitals-easy.json
+++ b/components/tasks/capitals/capitals-easy.json
@@ -1,5 +1,41 @@
 [{"Беларусь": "минск",
   "Россия": "москва",
   "Украина": "киев",
-  "Германия":"берлин"
+  "Германия":"берлин",
+  "Армения": "ереван",
+  "Бельгия": "брюссель",
+  "Болгария": "софия",
+  "Бразилия": "бразилиа",
+  "Венесуэла": "каракас",
+  "Дания": "копенгаген",
+  "Египет": "каир",
+  "Израиль": "Иерусалим",
+  "Индия": "нью-дели",
+  "Ирак": "багдад",
+  "Испания": "мадрид",
+  "Казахстан": "астана",
+  "Канада": "Оттава",
+  "Китай": "пекин",
+  "Япония": "токио",
+  "Латвия": "рига",
+  "Польша": "варшава",
+  "Сербия": "белград",
+  "Словения": "любляна",
+  "словакия": "братислава",
+  "США": "вашингтон",
+  "Тайланд": "бангкок",
+  "Тунис": "тунис",
+  "Узбекистан": "ташкент",
+  "Франция": "париж",
+  "Чехия": "прага",
+  "Швеция": "стокгольм",
+  "Эстония": "таллин",
+  "Южная Корея": "сеул",
+  "Хорватия": "загреб",
+  "Турция": "анкара",
+  "Таджикистан": "душанбе",
+  "Сингапур": "сингапур",
+  "Сирия": "дамаск",
+  "Северная Корея": "пхеньян",
+  "Румыния": "бухарест"
 }]
