--- a/components/tasks/eng-ru/vocab-easy.json
+++ b/components/tasks/eng-ru/vocab-easy.json
@@ -1,5 +1,75 @@
 [{"cat":["котик", "кот"],
   "dog":["собака", "собачка"],
   "pig":["поросёнок", "свинка", "свинья"],
-  "rabbit":["кроль","кролик"]
+  "rabbit":["кроль","кролик"],
+  "dad":["отец","папа","батя"],
+  "father":["отец","папа","батя"],
+  "mother":["мать", "мама","матушка"],
+  "brother":["братюня","брат"],
+  "tree":["дерево"],
+  "grandfather":["дедушка","дед"],
+  "grandmother":["бабуля", "бабушка"],
+  "arrow":["стрела"],
+  "color":["цвет"],
+  "yellow":["жёлтый"],
+  "red":["красный"],
+  "black":["чёрный"],
+  "white":["белый"],
+  "green":["зелёный","зеленый"],
+  "violet":["фиолетовый"],
+  "flower":["цветок"],
+  "house":["дом"],
+  "street":["улица"],
+  "basketball":["баскетбол"],
+  "football":["футбол"],
+  "hockey":["хоккей"],
+  "winter":["зима"],
+  "autumn":["осень"],
+  "spring":["весна"],
+  "summer":["лето"],
+  "village":["деревня"],
+  "apple":["яблоко"],
+  "orange":["апельсин","оранжевый"],
+  "strawberry":["клубника"],
+  "tea":["чай"],
+  "coffee":["кофе"],
+  "police":["полиция"],
+  "car":["машина"],
+  "forest":["лес"],
+  "fish":["рыба"],
+  "hamster":["хомяк"],
+  "mouse":["мышь"],
+  "animal":["животное"],
+  "pencil":["карандаш"],
+  "pen":["ручка"],
+  "keyboard":["клавиатура"],
+  "sound":["звук"],
+  "voice":["голос"],
+  "brush":["кисть","кисточка"],
+  "tooth":["зуб"],
+  "teeth":["зубы"],
+  "leg":["нога"],
+  "head":["голова"],
+  "body":["туловище"],
+  "hand":["рука"],
+  "school":["школа"],
+  "paper":["бумага"],
+  "chocolate":["шоколад"],
+  "taste":["вкус"],
+  "spoon":["ложка"],
+  "guitar":["гитара"],
+  "drums":["барабаны"],
+  "bycicle":["велосипед"],
+  "airplane":["самолёт"],
+  "baloon":["воздушный шар","шар"],
+  "cartoon":["мультик"],
+  "art":["искусство"],
+  "girl":["девочка","девушка"],
+  "man":["мужчина"],
+  "woman":["женщина"],
+  "women":["женщины"],
+  "painter":["художник"],
+  "castle":["замок","башня"],
+  "rock":["скала","рок"],
+  "mountain":["гора"]
 }]
