--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development",
     "dev": "webpack-dev-server --inline --hot --open",
-    "start": "node src/screens/score.js"
+    "start": "node server/server.js"
   },
   "keywords": [
     "game",
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.3",
+    "babel-cli": "^6.26.0",
     "express": "^4.16.4",
     "expresss": "0.0.0",
     "jquery": "^3.3.1",
