--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
+    "copy": "^0.3.2",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
